--- a/case-complexity.tex
+++ b/case-complexity.tex
@@ -4,72 +4,72 @@
 
 \section{The pattern}
 
-\ex. \tsc{int:nom}, \tsc{ext:acc}
-\a. \tsc{nom} not attested
+\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
+\a. \ac{nom} not attested
 \bg. jah þoei ist us Laudeikaion jus ussiggwaid\\
- and what.\tsc{acc} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
+ and what.\ac{acc} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
  `and read that which is from Laodicea' \hfill (Colossians 4:16, gloss and translation by \citealt[357]{harbert1978})
 
-\ex. \tsc{int:nom}, \tsc{ext:dat}
-\a. \tsc{nom} not attested
+\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
+\a. \ac{nom} not attested
 \bg. þaimei iupa sind fraþjaiþ\\
- what.\tsc{dat} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
+ what.\ac{dat} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
  `set your mind on those which are above' \flushfill{(Colossians 3:2, gloss and translation by \citealt[339]{harbert1978})}
 
-\ex. \tsc{int:acc}, \tsc{ext:nom}
+\ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
 \ag. þanei frijos siuks ist\\
- who.\tsc{acc} love\scsub{[acc]} sick is\scsub{[nom]}\\
+ who.\ac{acc} love\scsub{[acc]} sick is\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{(John 11:3, gloss and translation by \citealt[342]{harbert1978})}
-\b. \tsc{nom} not attested
+\b. \ac{nom} not attested
 
-\ex. \tsc{int:acc}, \tsc{ext:dat}
-\a. \tsc{acc} not attested
+\ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
+\a. \ac{acc} not attested
 \bg. hva nu wileiþ ei taujau þammei qiþiþ þiudan Iudaie?\\
- what now want that do\scsub{[dat]} who.\tsc{dat} say\scsub{[acc]} king {of Jews}\\
+ what now want that do\scsub{[dat]} who.\ac{dat} say\scsub{[acc]} king {of Jews}\\
  `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{(Mark 15:12, gloss and translation by \citealt[339]{harbert1978})}
 
-\ex. \tsc{int:dat}, \tsc{ext:nom}
+\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
 \ag. iþ þammei leitil fraletada leitil frijod\\
- but who.\tsc{dat} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
+ but who.\ac{dat} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{(Luke 7:47, gloss and translation by \citealt[342]{harbert1978})}
-\b. \tsc{nom} not attested
+\b. \ac{nom} not attested
 
-\ex. \tsc{int:dat}, \tsc{ext:acc}, is with a preposition
+\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}, is with a preposition
 \ag. ushafjands ana þammei lag\\
- {picking up}\scsub{[acc]}\scsub{[dat]} on what.\tsc{dat} lay\\
+ {picking up}\scsub{[acc]}\scsub{[dat]} on what.\ac{dat} lay\\
  `picking up that on which he lay' \flushfill{(Luke 5:25, gloss and translation by \citealt[343]{harbert1978})}
-\b. \tsc{acc} not attested
+\b. \ac{acc} not attested
 
 \begin{table}[h]
   \center
   \caption {Case attraction in headless relatives in Gothic}
     \begin{tabular}{c|c|c|c}
       \toprule
-        \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
-            & \tsc{[nom]}
-            & \tsc{[acc]}
-            & \tsc{[dat]}
+        \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+            & [\ac{nom}]
+            & [\ac{acc}]
+            & [\ac{dat}]
             \\ \cmidrule{1-4}
-        \tsc{[nom]}
-            & \colorbox{LG}{\tsc{nom}}
-            & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
-            & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
+        [\ac{nom}]
+            & \colorbox{LG}{\ac{nom}}
+            & \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{acc}}}
+            & \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{dat}}}
             \\ \cmidrule{1-4}
-        \tsc{[acc]}
-            & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{?\tsc{nom}}
-            &	\colorbox{LG}{\tsc{acc}}
-            &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
+        [\ac{acc}]
+            & \diagbox[linecolor=white]{\colorbox{DG}{\ac{acc}}}{?\ac{nom}}
+            &	\colorbox{LG}{\ac{acc}}
+            &	\diagbox[linecolor=white]{?\ac{acc}}{\colorbox{DG}{\ac{dat}}}
             \\ \cmidrule{1-4}
-        \tsc{[dat]}
-            & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{nom}}
-            &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{acc}}
-            & \colorbox{LG}{\tsc{dat}}
+        [\ac{dat}]
+            & \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{?\ac{nom}}
+            &	\diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{?\ac{acc}}
+            & \colorbox{LG}{\ac{dat}}
             \\
       \bottomrule
     \end{tabular}
 \end{table}
 
-\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
+\ex. \ac{nom} < \ac{acc} < \ac{dat}
 
 \phantom{x}
 
@@ -77,7 +77,7 @@
 
 \section{Accessibility hierarchy}
 
-\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
+\ex. \ac{nom} < \ac{acc} < \ac{dat}
 
 \phantom{x}
 
@@ -88,22 +88,24 @@
 
 \subsection{Morphological containment}
 
+\citep[16]{nikolaeva1999}
+
 \begin{table}[h]
   \center
-	\caption {Transparent case containment in Khanty \citep[16]{nikolaeva1999}}
+	\caption {Transparent case containment in Khanty}
 		\begin{tabular}{clll}
 		\toprule
-              & \tsc{1sg}
-              & \tsc{3sg}
-              & \tsc{1pl}                               \\
+              & \ac{1}\ac{sg}
+              & \ac{3}\ac{sg}
+              & \ac{1}\ac{pl}                               \\
 		\cmidrule{2-4}
-    \tsc{nom} & ma
+    \ac{nom} & ma
               & luw
               & muŋ                                     \\
-    \tsc{acc} & ma\tbf{:-ne:m}
+    \ac{acc} & ma\tbf{:-ne:m}
               & luw\tbf{-e:l}
               & muŋ\tbf{-e:w}                           \\
-    \tsc{dat} & ma\tbf{:-ne:m}-\textcolor{DG}{\tbf{na}}
+    \ac{dat} & ma\tbf{:-ne:m}-\textcolor{DG}{\tbf{na}}
               & luw\tbf{-e:l}-\textcolor{DG}{\tbf{na}}
               & muŋ\tbf{-e:w}-\textcolor{DG}{\tbf{na}}  \\
 		\bottomrule
@@ -111,10 +113,11 @@
 \end{table}
 
 
+\citep[31-46]{boretzky1994}
 
 \begin{table}[h]
   \center
-	\caption {Transparent case containment in Kalderaš Romani \citep[31-46]{boretzky1994}}
+	\caption {Transparent case containment in Kalderaš Romani}
 		\begin{tabular}{cllll}
 		\toprule
               & `brother'
@@ -122,15 +125,15 @@
               & `girl'
               & `girls'                                   \\
 		\cmidrule{2-5}
-    \tsc{nom} & phral
+    \ac{nom} & phral
               & phral-(á)
               & rakl-í
               & rakl-já                                   \\
-    \tsc{acc} & phral-\tbf{és}
+    \ac{acc} & phral-\tbf{és}
               & phral-\tbf{én}
               & rakl-\tbf{já}
               & rakl-já-\tbf{n}                           \\
-    \tsc{dat} & phral-\tbf{és}-\textcolor{DG}{\tbf{kə}}
+    \ac{dat} & phral-\tbf{és}-\textcolor{DG}{\tbf{kə}}
               & phral-\tbf{én}-\textcolor{DG}{\tbf{gə}}
               & rakl-\tbf{já}-\textcolor{DG}{\tbf{kə}}
               & rakl-já-\tbf{n}-\textcolor{DG}{\tbf{gə}}  \\
@@ -138,32 +141,33 @@
 		\end{tabular}
 \end{table}
 
+\citep[23-24]{gippert1987}
 
 \begin{table}[h]
   \center
-	\caption {Transparent case containment in West Tocharian \citep[23-24]{gippert1987}}
+	\caption {Transparent case containment in West Tocharian}
 		\begin{tabular}{cll}
 		\toprule
               & `horses'
               & `men'                                  \\
 		\cmidrule{2-3}
-    \tsc{nom} & yakwi
+    \ac{nom} & yakwi
               & eṅkwi                                  \\
-    \tsc{acc} & yakwe-\tbf{ṃ}
+    \ac{acc} & yakwe-\tbf{ṃ}
               & eṅkwe-\tbf{ṃ}                          \\
-    \tsc{dat} & yäkwe-\tbf{ṃ}-\textcolor{DG}{\tbf{ts}}
+    \ac{dat} & yäkwe-\tbf{ṃ}-\textcolor{DG}{\tbf{ts}}
               & eṅkwe-\tbf{ṃ}-\textcolor{DG}{\tbf{ts}} \\
 		\bottomrule
 		\end{tabular}
 \end{table}
 
-\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
+\ex. \ac{nom} < \ac{acc} < \ac{dat}
 
 \phantom{x}
 
 \subsection{Suppletion}
 
-\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
+\ex. \ac{nom} < \ac{acc} < \ac{dat}
 
 \phantom{x}
 
@@ -181,11 +185,11 @@ cognates across Slavic - Serbian
 		\toprule
               & Icelandic           & Russian             & \multicolumn{3}{c}{Serbian}               \\
 		            \cmidrule(lr){2-2}    \cmidrule(lr){3-3}    \cmidrule(lr){4-6}
-              & \tsc{1sg}           & \tsc{1pl}           & \tsc{3sg.f} & \tsc{3sg.m}  & \tsc{3sg.n}  \\
+              & \ac{1}\ac{sg}           & \ac{1}\ac{pl}           & \ac{3}\ac{sg}.\ac{f} & \ac{3}\ac{sg}.\ac{m}  & \ac{3}\ac{sg}.\ac{n}  \\
 		            \cmidrule(lr){2-2}    \cmidrule(lr){3-3}    \cmidrule(lr){4-6}
-    \tsc{nom} & ég                  & my                  &  ona        & oni          & on           \\
-    \tsc{acc} & \tbf{m}ig           & \tbf{n}as           & \tbf{nj}u   & \tbf{nji}h   & \tbf{nje}-ga \\
-    \tsc{dat} & \tbf{m}ér           & \tbf{n}am           & \tbf{nj}oj  & \tbf{nji}ma  & \tbf{nje}-mu \\
+    \ac{nom} & ég                  & my                  &  ona        & oni          & on           \\
+    \ac{acc} & \tbf{m}ig           & \tbf{n}as           & \tbf{nj}u   & \tbf{nji}h   & \tbf{nje}-ga \\
+    \ac{dat} & \tbf{m}ér           & \tbf{n}am           & \tbf{nj}oj  & \tbf{nji}ma  & \tbf{nje}-mu \\
     \bottomrule
 		\end{tabular}
 \end{table}
@@ -196,16 +200,16 @@ cognates across Slavic - Serbian
 
 \begin{table}[h]
   \center
-	\caption {ABB patterns in suppletion}
+	\caption {ABC patterns in suppletion}
 		\begin{tabular}{ccc}
 		\toprule
               & Khinalugh           \\
 		            \cmidrule(lr){2-2}
-              & \tsc{1sg}           \\
+              & \ac{1}\ac{sg}           \\
 		            \cmidrule(lr){2-2}
-    \tsc{nom} & zɨ                  \\
-    \tsc{acc} & jä                  \\
-    \tsc{dat} & as(ɨr)              \\
+    \ac{nom} & zɨ                  \\
+    \ac{acc} & jä                  \\
+    \ac{dat} & as(ɨr)              \\
     \bottomrule
 		\end{tabular}
 \end{table}
@@ -217,16 +221,16 @@ cognates across Slavic - Serbian
 
 \begin{table}[h]
   \center
-	\caption {ABB patterns in suppletion}
+	\caption {AAB patterns in suppletion}
 		\begin{tabular}{cccc}
 		\toprule
               & Yurok                           & \multicolumn{2}{c}{Wardaman}             \\
 		            \cmidrule(lr){2-2}                 \cmidrule(lr){3-4}
-              & \tsc{3sg}                       & \tsc{3sg}         & \tsc{3pl}            \\
+              & \ac{3}\ac{sg}                       & \ac{3}\ac{sg}         & \ac{3}\ac{pl}            \\
 		            \cmidrule(lr){2-2}                 \cmidrule(lr){3-4}
-    \tsc{nom} & \tbf{yoɂ}(o·t), \tbf{woɂ}(o·t)  & \tbf{narnaj}      & \tbf{narnaj}-bulu    \\
-    \tsc{acc} & \tbf{yoɂ}o·t, \tbf{woɂ}o·t      & \tbf{narnaj}-(j)i & \tbf{narnaj}-bulu-yi \\
-    \tsc{dat} & weyaɂik                         & gunga             & wurrugu              \\
+    \ac{nom} & \tbf{yoɂ}(o·t), \tbf{woɂ}(o·t)  & \tbf{narnaj}      & \tbf{narnaj}-bulu    \\
+    \ac{acc} & \tbf{yoɂ}o·t, \tbf{woɂ}o·t      & \tbf{narnaj}-(j)i & \tbf{narnaj}-bulu-yi \\
+    \ac{dat} & weyaɂik                         & gunga             & wurrugu              \\
     \bottomrule
 		\end{tabular}
 \end{table}
@@ -244,7 +248,7 @@ cognates across Slavic - Serbian
 
 
 
-\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
+\ex. \ac{nom} < \ac{acc} < \ac{dat}
 
 
 
@@ -252,12 +256,12 @@ cognates across Slavic - Serbian
 
 \ex.
 \begin{forest} boom
-  [\tsc{datP}
-      [\tsc{dat}]
-      [\tsc{accP}
-          [\tsc{acc}]
-          [\tsc{nomP}
-              [\tsc{nom}]
+  [\ac{dat}P
+      [\ac{dat}]
+      [\ac{acc}P
+          [\ac{acc}]
+          [\ac{nom}P
+              [\ac{nom}]
               [..
                   [..,roof]
               ]
