--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -9,10 +9,10 @@ Old High German only has proper attraction. Modern German only has inverse attra
 
 \begin{table}[h]
 	\center
-	\caption {\tsc{int} vs. \tsc{ext} in Modern and Old High German and Gothic}
+	\caption {\ac{int} vs. \ac{ext} in Modern and Old High German and Gothic}
 		\begin{tabular}{ccc}
 		\toprule
-		 								& \tsc{int>ext}				& \tsc{ext>int}				\\
+		 								& \ac{int}>\ac{ext}				& \ac{ext}>\ac{int}				\\
 										& inverse attraction	& proper attraction		\\
 										\cmidrule{2-3}
 		Modern German 	& ✔			 							&	*										\\
@@ -32,25 +32,25 @@ Old High German only has proper attraction. Modern German only has inverse attra
   \caption {Case attraction in headless relatives in Gothic}
     \begin{tabular}{c|c|c|c}
 			\toprule
-				\diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
-						& \tsc{[nom]}
-						& \tsc{[acc]}
-						& \tsc{[dat]}
+				\diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+						& [\ac{nom}]
+						& [\ac{acc}]
+						& [\ac{dat}]
 						\\ \cmidrule{1-4}
-				\tsc{[nom]}
-						& \colorbox{LG}{\tsc{nom}}
-						& \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
-						& \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
+				[\ac{nom}]
+						& \colorbox{LG}{\ac{nom}}
+						& \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{acc}}}
+						& \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{dat}}}
 						\\ \cmidrule{1-4}
-				\tsc{[acc]}
-						& \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{?\tsc{nom}}
-						&	\colorbox{LG}{\tsc{acc}}
-						&	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
+				[\ac{acc}]
+						& \diagbox[linecolor=white]{\colorbox{DG}{\ac{acc}}}{?\ac{nom}}
+						&	\colorbox{LG}{\ac{acc}}
+						&	\diagbox[linecolor=white]{?\ac{acc}}{\colorbox{DG}{\ac{dat}}}
 						\\ \cmidrule{1-4}
-				\tsc{[dat]}
-						& \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{nom}}
-						&	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{acc}}
-						& \colorbox{LG}{\tsc{dat}}
+				[\ac{dat}]
+						& \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{?\ac{nom}}
+						&	\diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{?\ac{acc}}
+						& \colorbox{LG}{\ac{dat}}
 						\\
 			\bottomrule
     \end{tabular}
@@ -60,40 +60,39 @@ Old High German only has proper attraction. Modern German only has inverse attra
 \subsection{Old High German}
 
 
-\ex. \tsc{int:nom}, \tsc{ext:acc}
-\a. \tsc{nom} not attested
+\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
+\a. \ac{nom} not attested
 \bg. ih bibringu fona Juda dhen mina berga chisetzit\\
- I educate\scsub{[acc]} about Juda who.\tsc{acc} my mountains {through pull}\scsub{[nom]}\\
+ I educate\scsub{[acc]} about Juda who.\ac{acc} my mountains {through pull}\scsub{[nom]}\\
  `I educate the one who wanders through my mountains about Judas' \flushfill{(Old High German, Isidor 34:3, \citealt[761]{behaghel1923})}
 
-\ex. \tsc{int:nom}, \tsc{ext:dat}
-\a. \tsc{nom} not attested
+\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
+\a. \ac{nom} not attested
 \bg. aer antuurta demo zaimo sprah\\
- he replied\scsub{[dat]} who.\tsc{dat} {to him} spoke\scsub{[nom]}\\
- `he replied to the one who spoke to him' \flushfill{(Old High German, Monsee Fragments 7:24, \citealt[761]{behaghel1923},}\\
- \rightalign{gloss and translation by \citealt[199]{pittner1995})}
+ he replied\scsub{[dat]} who.\ac{dat} {to him} spoke\scsub{[nom]}\\
+ `he replied to the one who spoke to him' \flushfill{(Old High German, Monsee Fragments 7:24, \citealt[761]{behaghel1923}, gloss and translation by \citealt[199]{pittner1995})}
 \bg. gebe themo ni eigi\\
- give\scsub{[dat]} who.\tsc{dat} not posses\scsub{[nom]}\\
+ give\scsub{[dat]} who.\ac{dat} not posses\scsub{[nom]}\\
  `give to the one who does not have' \flushfill{(Old High German, Otfrid I 24:77)}\\
  `gebe dem der nicht hat' \flushfill{(translation by Schrodt, 175)}
 
-\ex. \tsc{int:acc}, \tsc{ext:nom}
-\a. \tsc{acc} not attested
-\b. \tsc{nom} not attested
+\ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
+\a. \ac{acc} not attested
+\b. \ac{nom} not attested
 
-\ex. \tsc{int:acc}, \tsc{ext:dat}
-\a. \tsc{acc} not attested
+\ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
+\a. \ac{acc} not attested
 \bg. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
- {are you} superior\scsub{[dat]} {to Abraham} also who.\tsc{dat} one here now named\scsub{[acc]}\\
+ {are you} superior\scsub{[dat]} {to Abraham} also who.\ac{dat} one here now named\scsub{[acc]}\\
  `are you superior to Abraham to those which they just mentioned?' \flushfill{(Old High German, Otfrid III 18:33, \citealt[761]{behaghel1923})}
 
-\ex. \tsc{int:dat}, \tsc{ext:nom}
-\a. \tsc{dat} not attested
-\b. \tsc{nom} not attested
+\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
+\a. \ac{dat} not attested
+\b. \ac{nom} not attested
 
-\ex. \tsc{int:dat}, \tsc{ext:acc}
-\a. \tsc{dat} not attested
-\b. \tsc{acc} not attested
+\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
+\a. \ac{dat} not attested
+\b. \ac{acc} not attested
 
 
 
@@ -130,25 +129,25 @@ So, to sum up:
   \caption {Case attraction in headless relatives in Old High German}
     \begin{tabular}{c|c|c|c}
 			\toprule
-				\diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
-						& \tsc{[nom]}
-						& \tsc{[acc]}
-						& \tsc{[dat]}
+				\diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+						& [\ac{nom}]
+						& [\ac{acc}]
+						& [\ac{dat}]
 						\\ \cmidrule{1-4}
-				\tsc{[nom]}
-						& \colorbox{LG}{\tsc{nom}}
-						& \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
-						& \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
+				[\ac{nom}]
+						& \colorbox{LG}{\ac{nom}}
+						& \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{acc}}}
+						& \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{dat}}}
 						\\ \cmidrule{1-4}
-				\tsc{[acc]}
-						& \diagbox[linecolor=white]{?\tsc{acc}}{?\tsc{nom}}
-						&	\colorbox{LG}{\tsc{acc}}
-						&	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
+				[\ac{acc}]
+						& \diagbox[linecolor=white]{?\ac{acc}}{?\ac{nom}}
+						&	\colorbox{LG}{\ac{acc}}
+						&	\diagbox[linecolor=white]{?\ac{acc}}{\colorbox{DG}{\ac{dat}}}
 						\\ \cmidrule{1-4}
-				\tsc{[dat]}
-						& \diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{nom}}
-						&	\diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{acc}}
-						& \colorbox{LG}{\tsc{dat}}
+				[\ac{dat}]
+						& \diagbox[linecolor=white]{?\ac{dat}}{?\ac{nom}}
+						&	\diagbox[linecolor=white]{?\ac{dat}}{?\ac{acc}}
+						& \colorbox{LG}{\ac{dat}}
 						\\
 			\bottomrule
     \end{tabular}
@@ -159,79 +158,79 @@ So, to sum up:
 
 \subsection{Modern German}
 
-\ex. \tsc{int:nom}, \tsc{ext:acc}
+\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
 \ag. *Ich {lade ein}, wer mir sympathisch ist.\\
- I invite\scsub{[acc]} who.\tsc{nom} me nice is\scsub{[nom]}\\
+ I invite\scsub{[acc]} who.\ac{nom} me nice is\scsub{[nom]}\\
  `I invite who I like.' \flushfill{\citep[344]{vogel2001}}
 \bg. *Ich {lade ein}, wen mir sympathisch ist.\\
- I invite\scsub{[acc]} who.\tsc{acc} me nice is\scsub{[nom]}\\
+ I invite\scsub{[acc]} who.\ac{acc} me nice is\scsub{[nom]}\\
  `I invite who I like.' \flushfill{\citep[344]{vogel2001}}
 
-\ex. \tsc{int:nom}, \tsc{ext:dat}
+\ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
 \ag. *Ich vertraue, wer Hitchcock mag.\\
- I trust\scsub{[dat]} who.\tsc{nom} Hitchcock likes\scsub{[nom]}\\
+ I trust\scsub{[dat]} who.\ac{nom} Hitchcock likes\scsub{[nom]}\\
  `I trust who likes Hitchcock.' \flushfill{\citep[345]{vogel2001}}
 \bg. *Ich vertraue, wem Hitchcock mag.\\
- I trust\scsub{[dat]} who.\tsc{dat} Hitchcock likes\scsub{[nom]}\\
+ I trust\scsub{[dat]} who.\ac{dat} Hitchcock likes\scsub{[nom]}\\
  `I trust who likes Hitchcock.' \flushfill{\citep[345]{vogel2001}}
 
-\ex. \tsc{int:acc}, \tsc{ext:nom}
+\ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
 \ag. Uns besucht wen Maria mag.\\
- Us visits\scsub{[nom]} who.\tsc{acc} Maria.\tsc{nom} likes\scsub{[acc]}\\
+ Us visits\scsub{[nom]} who.\ac{acc} Maria.\ac{nom} likes\scsub{[acc]}\\
  `Who visits us likes Maria likes.' \flushfill{\citep[343]{vogel2001}}
 \bg. *Uns besucht wer Maria mag.\\
- Us visits\scsub{[nom]} who.\tsc{nom} Maria.\tsc{nom} likes\scsub{[acc]}\\
+ Us visits\scsub{[nom]} who.\ac{nom} Maria.\ac{nom} likes\scsub{[acc]}\\
  `Who visits us likes Maria likes.' \flushfill{\citep[343]{vogel2001}}
 
- \ex. \tsc{int:acc}, \tsc{ext:dat}
+ \ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
 \ag. *Ich vertraue wem auch Maria mag. \\
- I trust\scsub{[dat]} who.\tsc{dat} also Maria likes\scsub{[acc]}.\\
+ I trust\scsub{[dat]} who.\ac{dat} also Maria likes\scsub{[acc]}.\\
  `I trust whoever Maria also likes.' \flushfill{\citep[345]{vogel2001}}
 \bg. *Ich vertraue wen auch Maria mag. \\
- I trust\scsub{[dat]} who.\tsc{acc} also Maria likes\scsub{[acc]}.\\
+ I trust\scsub{[dat]} who.\ac{acc} also Maria likes\scsub{[acc]}.\\
  `I trust whoever Maria also likes.' \flushfill{\citep[345]{vogel2001}}
 
-\ex. \tsc{int:dat}, \tsc{ext:nom}
+\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
 \ag. Uns besucht wem Maria vertraut.\\
- us visits\scsub{[nom]} who.\tsc{dat} Maria trusts\scsub{[dat]}\\
+ us visits\scsub{[nom]} who.\ac{dat} Maria trusts\scsub{[dat]}\\
  `Who visits us, Maria trusts.' \flushfill{\citep[343]{vogel2001}}
 \bg. *Uns besucht wer Maria vertraut.\\
- us visits\scsub{[nom]} who.\tsc{nom} Maria trusts\scsub{[dat]}\\
+ us visits\scsub{[nom]} who.\ac{nom} Maria trusts\scsub{[dat]}\\
  `Who visits us, Maria trusts.' \flushfill{\citep[343]{vogel2001}}
 
-\ex. \tsc{int:dat}, \tsc{ext:acc}
+\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
 \ag. Ich {lade ein} wem auch Maria vertraut. \\
- I invite\scsub{[acc]} who.\tsc{dat} also Maria trusts\scsub{[dat]}.\\
+ I invite\scsub{[acc]} who.\ac{dat} also Maria trusts\scsub{[dat]}.\\
  `I invite whoever Maria also trusts.' \flushfill{\citep[344]{vogel2001}}
 \bg. *Ich {lade ein} wen auch Maria vertraut. \\
- I invite\scsub{[acc]} who.\tsc{acc} also Maria trusts\scsub{[dat]}.\\
+ I invite\scsub{[acc]} who.\ac{acc} also Maria trusts\scsub{[dat]}.\\
  `I invite whoever Maria also trusts.' \flushfill{\citep[344]{vogel2001}}
 
 
  \begin{table}[h]
    \center
-   \caption {Case attraction in headless relatives in Old High German}
+   \caption {Case attraction in headless relatives in Modern German}
      \begin{tabular}{c|c|c|c}
 			 \toprule
-				 \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
-						 & \tsc{[nom]}
-						 & \tsc{[acc]}
-						 & \tsc{[dat]}
+				 \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+						 & [\ac{nom}]
+						 & [\ac{acc}]
+						 & [\ac{dat}]
 						 \\ \cmidrule{1-4}
-				 \tsc{[nom]}
-						 & \colorbox{LG}{\tsc{nom}}
-						 & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}}
-						 & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}}
+				 [\ac{nom}]
+						 & \colorbox{LG}{\ac{nom}}
+						 & \diagbox[linecolor=white]{*\ac{nom}}{*\ac{acc}}
+						 & \diagbox[linecolor=white]{*\ac{nom}}{*\ac{dat}}
 						 \\ \cmidrule{1-4}
-				 \tsc{[acc]}
-						 & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{*\tsc{nom}}
-						 &	\colorbox{LG}{\tsc{acc}}
-						 &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}}
+				 [\ac{acc}]
+						 & \diagbox[linecolor=white]{\colorbox{DG}{\ac{acc}}}{*\ac{nom}}
+						 &	\colorbox{LG}{\ac{acc}}
+						 &	\diagbox[linecolor=white]{*\ac{acc}}{*\ac{dat}}
 						 \\ \cmidrule{1-4}
-				 \tsc{[dat]}
-						 & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{nom}}
-						 &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{acc}}
-						 & \colorbox{LG}{\tsc{dat}}
+				 [\ac{dat}]
+						 & \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{*\ac{nom}}
+						 &	\diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{*\ac{acc}}
+						 & \colorbox{LG}{\ac{dat}}
 						 \\
 			 \bottomrule
      \end{tabular}
@@ -257,17 +256,17 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
 	\caption {Old High German relative pronouns in headless relatives}
 		\begin{tabular}{cccc}
 		\toprule
-							& \tsc{n.sg}	    & \tsc{m.sg}  & \tsc{f.sg}			\\
+							& \ac{n}.\ac{sg}	    & \ac{m}.\ac{sg}  & \ac{f}.\ac{sg}			\\
 								\cmidrule{2-4}
-		\tsc{nom} & d-aȥ          	& d-ër       	& d-iu						\\
-		\tsc{acc}	& d-aȥ   					& d-ën				& d-ea/-ia/(-ie)	\\
-		\tsc{dat}	& d-ëmu/-ëmo	    & d-ëmu/-ëmo	& d-ëru/-ëro			\\
+		\ac{nom} & d-aȥ          	& d-ër       	& d-iu						\\
+		\ac{acc}	& d-aȥ   					& d-ën				& d-ea/-ia/(-ie)	\\
+		\ac{dat}	& d-ëmu/-ëmo	    & d-ëmu/-ëmo	& d-ëru/-ëro			\\
 		\bottomrule
-	    				& \tsc{n.pl} & \tsc{m.pl}       & \tsc{f.pl}      \\
+	    				& \ac{n}.\ac{pl} & \ac{m}.\ac{pl}       & \ac{f}.\ac{pl}      \\
 	    					\cmidrule{2-4}
-    \tsc{nom} & d-iu/-ei   &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
-    \tsc{acc} & d-iu/-ei   &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
-    \tsc{dat} & d-ēm/-ēn   &  d-ēm/-ēn        & d-ēm/-ēn        \\
+    \ac{nom} & d-iu/-ei   &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
+    \ac{acc} & d-iu/-ei   &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
+    \ac{dat} & d-ēm/-ēn   &  d-ēm/-ēn        & d-ēm/-ēn        \\
     \bottomrule
 		\end{tabular}
 \end{table}
@@ -280,17 +279,17 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
 	\caption {Gothic relative pronouns in headless relatives}
 		\begin{tabular}{cccc}
 		\toprule
-							& \tsc{n.sg} 	& \tsc{m.sg}	& \tsc{f.sg}   \\
+							& \ac{n}.\ac{sg} 	& \ac{m}.\ac{sg}	& \ac{f}.\ac{sg}   \\
 		 						\cmidrule{2-4}
-    \tsc{nom} & þ-at-ei 	 	& s-a-ei 			& s-ō-ei			\\
-    \tsc{acc}	& þ-at-ei    	& þ-an-ei  		& þ-ō-ei  		\\
-    \tsc{dat} & þ-amm-ei 		& þ-amm-ei		& þ-izái-ei 	\\
+    \ac{nom} & þ-at-ei 	 	& s-a-ei 			& s-ō-ei			\\
+    \ac{acc}	& þ-at-ei    	& þ-an-ei  		& þ-ō-ei  		\\
+    \ac{dat} & þ-amm-ei 		& þ-amm-ei		& þ-izái-ei 	\\
 		\bottomrule
-    					& \tsc{n.pl}	& \tsc{m.pl}	& \tsc{f.pl}	\\
+    					& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}	& \ac{f}.\ac{pl}	\\
 						    \cmidrule{2-4}
-    \tsc{nom} & þ-ō-ei			&	þ-ái-ei			&	þ-ōz-ei			\\
-    \tsc{acc} & þ-ō-ei 			&	þ-anz-ei		&	þ-ōz-ei			\\
-    \tsc{dat} & þ-áim-ei		&	þ-áim-ei 		&	þ-áim-ei 		\\
+    \ac{nom} & þ-ō-ei			&	þ-ái-ei			&	þ-ōz-ei			\\
+    \ac{acc} & þ-ō-ei 			&	þ-anz-ei		&	þ-ōz-ei			\\
+    \ac{dat} & þ-áim-ei		&	þ-áim-ei 		&	þ-áim-ei 		\\
     \bottomrule
 		\end{tabular}
 \end{table}
@@ -303,11 +302,11 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
 	\caption {Modern German relative pronouns in headless relatives}
 		\begin{tabular}{ccc}
 		\toprule
-							& \tsc{inan}	& \tsc{an}	\\
+							& \ac{inan}	& \ac{an}	\\
 								\cmidrule{2-3}
-    \tsc{nom} & w-as    		& w-er   		\\
-    \tsc{acc} & w-as    		& w-en   		\\
-    \tsc{dat} & -  					& w-em    	\\
+    \ac{nom} & w-as    		& w-er   		\\
+    \ac{acc} & w-as    		& w-en   		\\
+    \ac{dat} & -  					& w-em    	\\
 		\bottomrule
 		\end{tabular}
 \end{table}
@@ -320,9 +319,9 @@ In Old High German, proper attraction in headless relatives can be derived from 
 
 
 
-\ex. \tsc{acc} instead of \tsc{nom}
+\ex. \ac{acc} instead of \ac{nom}
 \ag. unde ne wolden níet besên den mort den dô was geschên\\
- and not wanted not see the murder.\tsc{acc} that.\tsc{acc} there had happened\\
+ and not wanted not see the murder.\ac{acc} that.\ac{acc} there had happened\\
  `and they didn't want to see the murder that had happened.' \flushfill{(Middle High German, Nibelungenlied 1391,14, \citealt[756]{behaghel1923}, glosses and translation by \citealt[198]{pittner1995})}
 
 
