--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Introduction}
+\newchapter{Introduction}
 
 The topic of this thesis is case attraction in headless relative clauses. First I talk about the role of case in language. Second I discuss regular headed relative clauses and how they handle case. Third I introduce a phenomenon called case attraction in headed relative clause. Finally, I get to headless relative clauses that show case attraction.
 
