--- a/prepositions.tex
+++ b/prepositions.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Prepositions}
+\newchapter{Prepositions}
 
   \section{Headless relatives and prepositions}
 What happens if we analyze prepositions as expressions of case? (And what happens if we do not?)
