--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -30,3 +30,8 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 
 %%%bibliography%%%
 \usepackage[backend=biber,style=authoryear,natbib=true]{biblatex}
+
+\usepackage{acro}
+% probably a good idea for the nomenclature entries:
+\acsetup{first-style=short, cite=all, list-style=tabular}
+\DeclareInstance{acro-title}{empty}{sectioning}{name-format =}
