beetje verder met primary-texts
jaja

--- a/case-complexity.tex
+++ b/case-complexity.tex
@@ -8,7 +8,7 @@
 \a. \ac{nom} not attested
 \bg. jah þoei ist us Laudeikaion jus ussiggwaid\\
  and what.\ac{acc} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
- `and read that which is from Laodicea' \hfill (Colossians 4:16, gloss and translation by \citealt[357]{harbert1978})
+ `and read that which is from Laodicea' \hfill (\ac{col} 4:16, gloss and translation by \citealt[357]{harbert1978})
 
 \ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
 \a. \ac{nom} not attested
