--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -36,19 +36,19 @@
 
 \DeclareAcronym{n}{
   short = \tsc{n} ,
-  long  = neuter gender ,
+  long  = neuter ,
   class = abbr
 }
 
 \DeclareAcronym{m}{
   short = \tsc{m} ,
-  long  = masculine gender ,
+  long  = masculine ,
   class = abbr
 }
 
 \DeclareAcronym{f}{
   short = \tsc{f} ,
-  long  = feminine gender ,
+  long  = feminine ,
   class = abbr
 }
 
