--- a/fenna-files/primary-texts.sty
+++ b/fenna-files/primary-texts.sty
@@ -1,7 +1,6 @@
-\DeclareAcronym{angelsperarea}{
-  short = \ensuremath{a} ,
-  long  = The number of angels per unit area ,
-  sort  = a ,
+\DeclareAcronym{col}{
+  short = Col ,
+  long  = Colossians ,
   cite =  bergsma2019 ,
   class = nomencl
 }
