--- a/thesis.tex
+++ b/thesis.tex
@@ -12,7 +12,7 @@
 
 \begin{document}
 
-\ac{angelsperarea}, \ac{numofangels} and \ac{areaofneedle} are part of the
+ \ac{numofangels} and \ac{areaofneedle} are part of the
 nomenclature
 
 \maketitle
