--- a/case-complexity.tex
+++ b/case-complexity.tex
@@ -40,6 +40,7 @@
  `picking up that on which he lay' \flushfill{(Luke 5:25, gloss and translation by \citealt[343]{harbert1978})}
 \b. \ac{acc} not attested
 
+\begin{filecontents}{case-attraction-gothic.tex}
 \begin{table}[h]
   \center
   \caption {Case attraction in headless relatives in Gothic}
@@ -68,6 +69,9 @@
       \bottomrule
     \end{tabular}
 \end{table}
+\end{filecontents}
+
+\input{case-attraction-gothic.tex}
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}
 
