--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -27,34 +27,7 @@ Old High German only has proper attraction. Modern German only has inverse attra
 \subsection{Gothic}
 
 
-\begin{table}[h]
-  \center
-  \caption {Case attraction in headless relatives in Gothic}
-    \begin{tabular}{c|c|c|c}
-			\toprule
-				\diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
-						& [\ac{nom}]
-						& [\ac{acc}]
-						& [\ac{dat}]
-						\\ \cmidrule{1-4}
-				[\ac{nom}]
-						& \colorbox{LG}{\ac{nom}}
-						& \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{acc}}}
-						& \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{dat}}}
-						\\ \cmidrule{1-4}
-				[\ac{acc}]
-						& \diagbox[linecolor=white]{\colorbox{DG}{\ac{acc}}}{?\ac{nom}}
-						&	\colorbox{LG}{\ac{acc}}
-						&	\diagbox[linecolor=white]{?\ac{acc}}{\colorbox{DG}{\ac{dat}}}
-						\\ \cmidrule{1-4}
-				[\ac{dat}]
-						& \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{?\ac{nom}}
-						&	\diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{?\ac{acc}}
-						& \colorbox{LG}{\ac{dat}}
-						\\
-			\bottomrule
-    \end{tabular}
-\end{table}
+\input{case-attraction-gothic.tex}
 
 
 \subsection{Old High German}
@@ -253,7 +226,7 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
 
 \begin{table}[h]\label{tbl:paradigmohg}
 	\center
-	\caption {Old High German relative pronouns in headless relatives}
+	\caption {Relative pronouns in headless relatives in Old High German}
 		\begin{tabular}{cccc}
 		\toprule
 							& \ac{n}.\ac{sg}	    & \ac{m}.\ac{sg}  & \ac{f}.\ac{sg}			\\
@@ -274,9 +247,10 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
 
 \subsection{Gothic}
 
+
 \begin{table}[h]
 	\center
-	\caption {Gothic relative pronouns in headless relatives}
+	\caption {Relative pronouns in headless relatives in Gothic}
 		\begin{tabular}{cccc}
 		\toprule
 							& \ac{n}.\ac{sg} 	& \ac{m}.\ac{sg}	& \ac{f}.\ac{sg}   \\
@@ -299,7 +273,7 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
 
 \begin{table}[h]
 	\center
-	\caption {Modern German relative pronouns in headless relatives}
+	\caption {Relative pronouns in headless relatives in Modern German}
 		\begin{tabular}{ccc}
 		\toprule
 							& \ac{inan}	& \ac{an}	\\
