--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -29,9 +29,12 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 \renewcommand{\firstrefdash}{}
 
 %%%bibliography%%%
-\usepackage[backend=biber,style=authoryear,natbib=true]{biblatex}
+\usepackage[backend=biber,bibstyle=biblatex-gl,citestyle=gl-authoryear-comp,maxcitenames=3,maxbibnames=99]{biblatex}
+\usepackage{natbib}
 
 \usepackage{acro}
 % probably a good idea for the nomenclature entries:
 \acsetup{first-style=short, cite=all, list-style=tabular}
 \DeclareInstance{acro-title}{empty}{sectioning}{name-format =}
+
+\usepackage{filecontents}
